update .js and .html to only display hotspots if the user selects a state AND date for filtering

--- a/visuals/home.html
+++ b/visuals/home.html
@@ -47,11 +47,7 @@
                                 <option value="South_Carolina">South Carolina</option>
                                 <option value="Tennessee">Tennessee</option>
                             </select>
-
                         </form>
-
-                        <!-- buttons -->
-                        <br><button type="button" onclick="get_data_state()" class="press_me">Filter by State</button>
                     </div>
                 </div>
             </th>
@@ -102,7 +98,7 @@
                     </div>
 
                     <!-- buttons -->
-                    <br><button type="button" onclick="get_data_date()" class="press_me">Filter by Date</button>
+                    <br><button type="button" onclick="get_data_state()" class="press_me">Filter by Date</button>
                     <button type="button" onclick="complete_reset()" class="press_me">Reset</button>
                 </div>
             </th>
