frontend to backend

--- a/visuals/home.html
+++ b/visuals/home.html
@@ -125,7 +125,7 @@
 
                     <!-- hot spot data -->
                     <div id="hot_holder" class="hot_holder">
-                        <ol type="1" class="list_holder">
+                        <!--<ol type="1" class="list_holder">
                             <li id="one" data value="1">Hospital Name</li>
                             <br>
                             <li id="two" data value="2">Hospital Name</li>
@@ -146,7 +146,18 @@
                             <br>
                             <li id="ten" data value="10">Hospital Name</li>
                             <br>
-                        </ol>
+                        </ol>-->
+                        <table class="hotspot-table">
+                            <thead>
+                                <tr>
+                                    <th>Rank</th>
+                                    <th>Hospital Name</th>
+                                    <th>Capacity Used</th>
+                                </tr>
+                            </thead>
+                            <tbody id="hotspot-data">
+                            </tbody>
+                        </table>    
                     </div>
                 </div>
             </th>
