update headings and webpage description

--- a/visuals/home.html
+++ b/visuals/home.html
@@ -20,7 +20,7 @@
 
     <!-- description of hotspot -->
     <div>
-        <p class="def"><strong> Hotspot</strong> - 90% of hospital's beds are occupied, with at least 10 beds being used for COVID-19.</p>
+        <p class="def"> Ranks the top 10 hospitals based on percentage of total staffed bed occupancy </p>
     </div>
 
 
@@ -121,7 +121,7 @@
 
                 <!-- hot spot heading -->
                 <div id="hot_section" class="hot_spot">
-                    <h2 id="hot_words">Top 10 Hotspots Will Be Displayed Here</h2>
+                    <h2 id="hot_words">Top 10 Hospitals Will Be Displayed Here</h2>
 
                     <!-- hot spot data -->
                     <div id="hot_holder" class="hot_holder">
